force-app/main/default/objects/Round_Robin_Setting__mdt/Round_Robin_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Round Robin Setting</label>
    <pluralLabel>Round Robin Settings</pluralLabel>
</CustomObject>