force-app/main/default/objects/Round_Robin_Setting__mdt/fields/Maximum_Record_Per_Account_Batch__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Record_Per_Account_Batch__c</fullName>
    <label>Maximum Record Per Account Batch</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>