force-app/main/default/objects/Round_Robin_Setting__mdt/fields/Maximum_Record_Per_KPI_Batch__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Record_Per_KPI_Batch__c</fullName>
    <defaultValue>10000</defaultValue>
    <label>Maximum Record Per KPI Batch</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>