force-app/main/default/objects/Round_Robin_Setting__mdt/fields/Run_Case_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Case_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Setting to check if round robin can run Case trigger</description>
    <label>Run Case Trigger</label>
    <type>Checkbox</type>
</CustomField>