force-app/main/default/objects/Round_Robin_Setting__mdt/fields/Run_Lead_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Lead_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Setting to check if round robin can run lead trigger</description>
    <label>Run Lead Trigger</label>
    <type>Checkbox</type>
</CustomField>