force-app/main/default/objects/Round_Robin_Setting__mdt/fields/Run_Opportunity_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Opportunity_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Setting to check if round robin can run Opportunity trigger</description>
    <label>Run Opportunity Trigger</label>
    <type>Checkbox</type>
</CustomField>