force-app/main/default/objects/Round_Robin_Setting__mdt/fields/Run_Order_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Order_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Run Order Trigger</label>
    <type>Checkbox</type>
</CustomField>